# wearable-imu-tug-phase-recognition

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/paper/: architecture_sensitivity.csv  fogstar_subject_split.csv  imu_train_mean.npy  imu_train_std.npy  subject_level_split.csv
configs/: figures.yaml  fogstar.yaml  spmt.yaml  tug.yaml
docs/: data_layout.md  reproducibility.md
scripts/: make_paper_figures.py  run_fogstar.py  run_spmt.py  run_tug.py
src/tug_transfer/: __init__.py  cli.py  config.py  constants.py  utils.py
src/tug_transfer/data/: __init__.py  datasets.py  fogstar.py  preprocessing.py  records.py  splits.py  weargait.py  windowing.py
src/tug_transfer/experiments/: __init__.py  fogstar.py  spmt.py  tug.py
src/tug_transfer/figures/: __init__.py  paper.py
src/tug_transfer/models/: __init__.py  cnn_bilstm.py
src/tug_transfer/training/: __init__.py  engine.py  metrics.py  plots.py  transfer.py
tests/: test_fogstar_mapping.py  test_models.py  test_preprocessing.py  test_splits.py  test_windowing.py
